tests/baselines/reference/YieldExpression17_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression17_es6.ts(1,15): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/es6/yieldExpressions/YieldExpression17_es6.ts(1,15): error TS2378: A 'get' accessor must return a value.
tests/cases/conformance/es6/yieldExpressions/YieldExpression17_es6.ts(1,23): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression17_es6.ts (3 errors) ====
    var v = { get foo() { yield foo; } }
                  ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                  ~~~
!!! error TS2378: A 'get' accessor must return a value.
                          ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.